--- a/index.html
+++ b/index.html
@@ -44,5 +44,5 @@
 </head>
 <body class="bg-gray-100 text-gray-800">
   <app-root></app-root>
-<script src="main-VBQEF6KA.js" type="module"></script></body>
+<script src="main-HVETCMX7.js" type="module"></script></body>
 </html>
