deploy: 52fd09aa538cc967c017a724d511105381f0443a

--- a/index.html
+++ b/index.html
@@ -37,12 +37,17 @@
     "@angular/platform-browser": "https://esm.sh/@angular/platform-browser@^21.0.6?external=rxjs",
     "@angular/core/rxjs-interop": "https://esm.sh/@angular/core@^21.0.6/rxjs-interop?external=rxjs",
     "@angular/common": "https://esm.sh/@angular/common@^21.0.6?external=rxjs",
-    "@angular/forms": "https://esm.sh/@angular/forms@^21.0.6?external=rxjs"
+    "@angular/forms": "https://esm.sh/@angular/forms@^21.0.6?external=rxjs",
+    "@angular/core/testing": "https://esm.sh/@angular/core@^21.0.8/testing?external=rxjs",
+    "vitest/config": "https://esm.sh/vitest@^4.0.16/config?external=rxjs",
+    "vitest": "https://esm.sh/vitest@^4.0.16?external=rxjs",
+    "@angular/platform-browser-dynamic/testing": "https://esm.sh/@angular/platform-browser-dynamic@^21.0.8/testing?external=rxjs",
+    "@analogjs/vite-plugin-angular": "https://esm.sh/@analogjs/vite-plugin-angular@^2.2.1?external=rxjs"
   }
 }
 </script>
 </head>
 <body class="bg-gray-100 text-gray-800">
   <app-root></app-root>
-<script src="main-HVETCMX7.js" type="module"></script></body>
+<script src="main-P5JUSIB6.js" type="module"></script></body>
 </html>
