--- a/index.html
+++ b/index.html
@@ -49,5 +49,5 @@
 </head>
 <body class="bg-gray-100 text-gray-800">
   <app-root></app-root>
-<script src="main-P5JUSIB6.js" type="module"></script></body>
+<script src="main-QNBYDC2U.js" type="module"></script></body>
 </html>
