feat: Add PWA support with service worker
Enable offline capabilities and add to home screen functionality by integrating a service worker and manifest file. This allows RouteMaster to be installed and accessed offline.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Angular RouteMaster</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#0f172a">
+  <link rel="manifest" href="/manifest.json">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     /* Custom Scrollbar for log area */
@@ -49,5 +51,18 @@
 </head>
 <body class="bg-gray-100 text-gray-800">
   <app-root></app-root>
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/sw.js')
+          .then(registration => {
+            console.log('SW registered: ', registration);
+          })
+          .catch(registrationError => {
+            console.log('SW registration failed: ', registrationError);
+          });
+      });
+    }
+  </script>
 </body>
 </html>
